load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

cc_library(
    name = "openssl",
    hdrs = glob(["include/openssl/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":_openssl_import"],
)

cc_import(
    name = "_openssl_import",
    shared_library = "lib/libssl.1.1.dylib",
    static_library = "lib/libssl.a",
    deps = [":_libcrypto_import"],
)

cc_import(
    name = "_libcrypto_import",
    shared_library = "lib/libcrypto.1.1.dylib",
    static_library = "lib/libcrypto.a",
)

alias(
    name = "libcrypto",
    actual = ":_libcrypto_import",
    visibility = ["//visibility:public"],
)

alias(
    name = "crypto",
    actual = ":libcrypto",
    visibility = ["//visibility:public"],
)

# The following are to support the building of rust crate openssl-sys

copy_file(
    name = "libssl_copy",
    src = "lib/libssl.1.1.dylib",
    out = "libssl.dylib",
    allow_symlink = False,
)

copy_file(
    name = "libcrypto_copy",
    src = "lib/libcrypto.1.1.dylib",
    out = "libcrypto.dylib",
    allow_symlink = False,
)

copy_to_directory(
    name = "openssl_lib",
    srcs = [
        ":libcrypto_copy",
        ":libssl_copy",
    ],
    visibility = ["//visibility:public"],
)

copy_to_directory(
    name = "openssl_include",
    srcs = glob(["include/openssl/*.h"]),
    replace_prefixes = {"include/": ""},
    visibility = ["//visibility:public"],
)
